[gd_scene load_steps=12 format=3 uid="uid://pvrgrv7w5asj"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_fwbb1"]
[ext_resource type="PackedScene" uid="uid://kukoxby030re" path="res://scenes/grid.tscn" id="2_2ufes"]
[ext_resource type="PackedScene" uid="uid://cgyqikrrva0oc" path="res://scenes/game_manager.tscn" id="2_hhs6u"]
[ext_resource type="Script" path="res://scripts/camera_shake.gd" id="3_j7wsq"]
[ext_resource type="Texture2D" uid="uid://cr1nj2oo7avbh" path="res://assets/images/win_screen.png" id="5_rm5ux"]
[ext_resource type="PackedScene" uid="uid://7kunf6aab2ry" path="res://scenes/main_menu.tscn" id="7_iqnps"]
[ext_resource type="PackedScene" uid="uid://bboe8oflrhla1" path="res://scenes/game_over.tscn" id="7_pcgwo"]
[ext_resource type="AudioStream" uid="uid://cu4fp6qqd04o6" path="res://assets/sounds/music.mp3" id="8_47tqs"]
[ext_resource type="AudioStream" uid="uid://ciwkf2xkousa4" path="res://assets/sounds/blipSelect.wav" id="9_mc5gx"]
[ext_resource type="AudioStream" uid="uid://cel1ry7qvq18g" path="res://assets/sounds/click.wav" id="10_e1lrd"]
[ext_resource type="AudioStream" uid="uid://ccuhtj41wsvw2" path="res://assets/sounds/explosion.wav" id="11_npotk"]

[node name="Main" type="Node"]
script = ExtResource("1_fwbb1")

[node name="GameManager" parent="." instance=ExtResource("2_hhs6u")]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("3_j7wsq")

[node name="Grid" parent="." instance=ExtResource("2_2ufes")]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = -284.0
offset_bottom = -288.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)

[node name="MenuBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0.309804, 0.384314, 1)

[node name="MainMenu" parent="." instance=ExtResource("7_iqnps")]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = -160.0
offset_bottom = -90.0
scale = Vector2(4, 4)

[node name="WinScreen" type="TextureRect" parent="."]
visible = false
z_index = 49
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_rm5ux")

[node name="GameOver" parent="." instance=ExtResource("7_pcgwo")]
visible = false
z_index = 50
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = -160.0
offset_bottom = -90.0

[node name="RecursiveTimer" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_47tqs")
volume_db = -16.0
autoplay = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mc5gx")
volume_db = -5.0
pitch_scale = 2.0
max_polyphony = 5

[node name="ClearSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_e1lrd")
volume_db = -6.559
max_polyphony = 20

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_npotk")
max_polyphony = 20

[connection signal="timeout" from="RecursiveTimer" to="." method="_on_recursive_timer_timeout"]
